--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "mongodb": "^3.6.4",
     "mongoose": "^5.11.15",
     "morgan": "~1.9.1",
+    "node-sass": "^4.14.0",
     "node-sass-middleware": "^0.11.0",
     "nodeman": "^1.1.2",
     "nodemon": "^2.0.7",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "sass": "^1.32.8"
   }
 }
